# manuel

./: .gitignore  .justfile  .pre-commit-config.yaml  Dockerfile  README.md  action.yaml  pyproject.toml
.devcontainer/: Dockerfile
.github/workflows/: build.yaml  prd-build.yaml  prd-manuel-postgres.yaml  release.yaml
.github/workflows/scripts/: example.sql
.github/workflows/templates/checks/: action.yaml
.github/workflows/templates/manuel/: action.yaml
.github/workflows/templates/tests/: action.yaml
.github/workflows/utils/docker/: bigquery.Dockerfile
.github/workflows/utils/sql/: example_bq.sql
docs/: setup.md
docs/howto/: add_dialenct.md  set_up_cicd.md
scripts/: git_version.py
src/manuel/: _config.py  _core.py  _parser.py  _utils.py  cli.py
src/manuel/_executors/: __init__.py  base.py  bigquery.py  databricks.py  duckdb.py  motherduck.py  postgres.py
tests/: test_cli.py  test_config.py  test_parser.py  test_utils.py
tests/_executors/: test_bigquery.py  test_databricks.py  test_duckdb.py  test_motherduck.py  test_postgres.py
tests/manuel/: test_cli.py  test_config.py  test_parser.py
tests/manuel/_executors/: test_bigquery.py  test_databricks.py  test_postgres.py
tests/scripts/: test_git_version.py
