[project]
name = "manuel"
version = "0.0.0"
description = "Lint and execute one-time SQL scripts against some database"
authors = [
  {name="Jasper Ginn", email="jasperginn@gmail.com"}
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.1",
    "sqlalchemy>=2.0.34",
    "sqlfluff>=3.1.1",
    "typer>=0.12.5",
]

[tool.uv.sources]
devtools = { workspace = true }

[project.scripts]
manuel = "manuel.cli:entrypoint"

[tool.uv.workspace]
members = [
  "packages/*",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.9",
]
bigquery = [
    "sqlalchemy-bigquery>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "devtools",
    "google-api-core>=2.19.2",
    "google-auth>=2.34.0",
    "google-cloud-bigquery>=3.25.0",
    "pre-commit>=3.8.0",
    "psycopg[binary]>=3.2.2",
    "pytest-postgresql>=6.1.1",
]

[tool.black]
line-length = 88
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
    | .notebooks
    | .nox
  )
)
'''

[tool.isort]
profile = "black"
extend_skip = [".tmp", ".venv"]

[tool.mypy]
exclude = "^.tmp/"
ignore_missing_imports = true
explicit_package_bases = true

[tool.bandit]
skips = ['B101']

[tool.ruff]
lint.ignore = ["E501"]
extend-exclude = [
  "__pycache__",
  "docs",
  "site",
  ".tmp"
]

[tool.pytest.ini_options]
cache_dir = "/home/vscode/workspace/.cache/pytest"
pythonpath = [".", "scripts"]

[tool.git-version]
pre_release_commit_hash = true
